--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
         "prettier": "^2.3.1"
     },
     "scripts": {
-        "start": "node index.js",
+        "start": "node cli.js",
         "format": "prettier --write \"**/*.ts\" **/*.js *.json *.md *.js"
     },
-    "bin": "index.js",
+    "bin": "cli.js",
     "main": "index.js",
     "repository": {
         "type": "git",
