--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "koa-logger": "^3.2.1",
         "koa-static": "^5.0.0",
         "koa2-serve-index": "^2.0.1",
+        "minimist": "^1.2.5",
         "prettier": "^2.3.1"
     },
     "scripts": {
@@ -26,7 +27,7 @@
     },
     "author": "masx200 <masx200@qq.com>",
     "license": "MIT",
-    "description": "[Edit on StackBlitz ⚡️](https://stackblitz.com/edit/node-jsj5ay)",
+    "description": "",
     "bugs": {
         "url": "https://github.com/masx200/serve-cli/issues"
     },
