--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "type": "module",
     "name": "@masx200/serve-cli",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "private": false,
     "dependencies": {
         "@koa/cors": "^3.1.0",
@@ -10,6 +10,7 @@
         "koa-conditional-get": "^3.0.0",
         "koa-etag": "^4.0.0",
         "koa-logger": "^3.2.1",
+        "koa-range": "^0.3.0",
         "koa-static": "^5.0.0",
         "koa2-serve-index": "^2.0.1",
         "minimist": "^1.2.5",
