@masx200/koa-stream-etag"

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     },
     "type": "module",
     "name": "@masx200/serve-cli",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "private": false,
     "dependencies": {
         "@koa/cors": "^3.1.0",
+        "@masx200/koa-stream-etag": "^5.0.1",
         "koa": "^2.13.1",
         "koa-compress": "^5.0.1",
         "koa-conditional-get": "^3.0.0",
