--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     },
     "type": "module",
     "name": "@masx200/serve-cli",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "private": false,
+    "devDependencies": {
+        "prettier": "^2.3.1"
+    },
     "dependencies": {
         "@koa/cors": "^3.1.0",
         "@masx200/koa-stream-etag": "^5.0.1",
@@ -17,8 +20,7 @@
         "koa-range": "^0.3.0",
         "koa-static": "^5.0.0",
         "koa2-serve-index": "^2.0.1",
-        "minimist": "^1.2.5",
-        "prettier": "^2.3.1"
+        "minimist": "^1.2.5"
     },
     "scripts": {
         "start": "node cli.js",
