--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@koa/cors": "^3.1.0",
+        "@masx200/koa-range": "^1.0.0",
         "@masx200/koa-stream-etag": "^5.0.3",
         "koa": "^2.13.1",
         "koa-compress": "^5.0.1",
