--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "version": "1.1.1",
     "private": false,
     "devDependencies": {
+        "@types/koa": "^2.13.3",
         "prettier": "^2.3.1"
     },
     "dependencies": {
