--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "publishConfig": {
-        "registry": "https://registry.npmjs.org/"
+        "registry": "https://registry.npmjs.org/",
+        "access": "public"
     },
     "type": "module",
     "name": "@masx200/serve-cli",
-    "version": "1.1.6",
+    "version": "1.1.7",
     "private": false,
     "devDependencies": {
         "@types/koa": "^2.13.3",
