--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
     "type": "module",
     "name": "@masx200/serve-cli",
     "version": "1.2.0",
-    "private": false,
     "devDependencies": {
         "@types/koa": "^2.13.3",
         "prettier": "^2.3.1"
     },
     "dependencies": {
         "@koa/cors": "^3.1.0",
-        "@masx200/koa-range": "1.0.4",
-        "@masx200/koa-stream-etag": "^5.0.3",
+        "@masx200/koa-range": "^1.0.5",
+        "@masx200/koa-stream-etag": "^5.0.6",
         "koa": "^2.13.1",
         "koa-compress": "^5.0.1",
         "koa-conditional-get": "^3.0.0",
@@ -43,5 +42,6 @@
     "homepage": "https://github.com/masx200/serve-cli#readme",
     "resolutions": {
         "debug": "4.3.2"
-    }
+    },
+    "packageManager": "yarn@3.2.0"
 }
