--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
+    "types": "index.d.ts",
     "publishConfig": {
         "registry": "https://registry.npmjs.org/",
         "access": "public"
     },
     "type": "module",
     "name": "@masx200/serve-cli",
-    "version": "1.2.1",
+    "version": "1.3.0",
     "devDependencies": {
         "@types/koa": "^2.13.3",
+        "@types/koa-compress": "^4.0.3",
+        "@types/koa-conditional-get": "^2.0.0",
+        "@types/koa-etag": "^3.0.0",
+        "@types/koa-logger": "^3.1.2",
+        "@types/koa-static": "^4.0.2",
+        "@types/koa__cors": "^3.3.0",
+        "@types/minimist": "^1.2.2",
         "prettier": "^2.6.2",
         "typescript": "^4.6.4"
     },
@@ -26,7 +34,8 @@
     },
     "scripts": {
         "start": "node cli.js",
-        "format": "npx prettier --write \"**/*.ts\" **/*.js *.json *.md *.js"
+        "build": "tsc",
+        "format": "npx prettier --write *.ts *.json *.md *.js"
     },
     "bin": "cli.js",
     "main": "index.js",
